welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:3: error: Missing closing brace `}' assumed here
def Brosse() {
^PictureMono1:3: error: expected class or object definition
def Brosse() {
^PictureMono1:7: error: expected class or object definition
def faireV() {
^PictureMono1:16: error: expected start of definition
override def run() {for (compteur <- 1 to 4){
         ^